--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,17 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
+# Use a Java 17 JDK for Gradle/Kotlin compatibility (update this path if your JDK 17 is installed elsewhere)
+# NOTE: The following setting was previously present and caused Gradle to fail because the path was invalid.
+# To enable it, remove the leading '#' and replace the example path with your actual JDK 17 installation folder.
+# Examples (use forward slashes or escape backslashes):
+# org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.8-hotspot
+# org.gradle.java.home=C:\\Program Files\\Eclipse Adoptium\\jdk-17.0.8-hotspot
+# If you prefer to set JAVA_HOME system-wide instead, remove/comment this property and set JAVA_HOME.
+
+# Common options:
+# - Make sure the path points to the JDK root (NOT the `bin` directory). Example: C:/Program Files/Java/jdk-17.0.8
+# - Use forward slashes (/) or escape backslashes (\\) on Windows.
+# - If you already set the system JAVA_HOME to your JDK 17, leave this property commented out so Gradle uses it.
+
+# Example when you want Gradle to use a specific JDK (uncomment and edit):
+# org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.8-hotspot
