--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   # Map & Location
   google_maps_flutter: ^2.5.0
   geolocator: ^10.1.0
+  geocoding: ^3.0.0
   http: ^1.2.0
   flutter_polyline_points: ^2.0.0
   # Added for store registration map support
