--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.4
   cloud_firestore: ^5.5.2
-  
+  google_sign_in: ^6.2.1
+
   # State Management & Navigation
   provider: ^6.1.2
   
