--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,16 +48,16 @@ dependencies:
   google_fonts: ^6.2.1
   intl: ^0.20.1
   
-  # Map & Location
-  google_maps_flutter: ^2.5.0
+  # Map & Location (Using Mapbox only)
   geolocator: ^10.1.0
   geocoding: ^3.0.0
   http: ^1.2.0
-  flutter_polyline_points: ^2.0.0
-  # Added for store registration map support
+  # Mapbox for interactive maps
+  mapbox_maps_flutter: ^2.0.0
+  # OpenStreetMap for simple map selection (no API key needed)
   flutter_map: ^6.1.0
   latlong2: ^0.9.1
-  
+
   # Image Handling
   image_picker: ^1.0.7
   firebase_storage: ^12.3.6
