--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   image_picker: ^1.0.7
   firebase_storage: ^12.3.6
   cached_network_image: ^3.3.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
