--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   firebase_storage: ^12.3.6
   cached_network_image: ^3.3.1
   url_launcher: ^6.3.2
+  package_info_plus: ^8.1.2
 
 dev_dependencies:
   flutter_test:
