add crops to fertilizer advisory

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-BASE_URL=https://perenual.com/api/v2
-CROP_API_KEY=your_secret_api_key_here
-PERENUAL_API_KEY=sk-gpfM6996cb47e387c14923
+# Environment variables for local dev
+# Example:
+# MAPBOX_ACCESS_TOKEN=your_token_here
+
