--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Kisan Mitra needs microphone access for voice assistant features.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Kisan Mitra uses speech recognition to understand your voice commands.</string>
 </dict>
 </plist>
