--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,12 @@ dependencies:
   package_info_plus: ^8.1.2
   flutter_dotenv: ^6.0.0
 
+  # AI Voice Assistant
+  speech_to_text: ^7.0.0
+  flutter_tts: ^4.2.0
+  permission_handler: ^11.3.1
+  connectivity_plus: ^6.0.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
